Minor tweaks and more tests