@@ -41,14 +41,10 @@
     <jacoco.min.linecoverage>0.85</jacoco.min.linecoverage>
     <jacoco.min.branchcoverage>0.75</jacoco.min.branchcoverage>
     <javaModulesSurefireArgLine>
-      --add-exports io.clientcore.core/io.clientcore.core.implementation.http=ALL-UNNAMED
-      --add-exports io.clientcore.core/io.clientcore.core.implementation.http.serializer=ALL-UNNAMED
-      --add-exports io.clientcore.core/io.clientcore.core.implementation.util=ALL-UNNAMED
+      --add-opens io.clientcore.http.netty4/io.clientcore.http.netty4=ALL-UNNAMED
+      --add-opens io.clientcore.http.netty4/io.clientcore.http.netty4.implementation=ALL-UNNAMED
 
-      --add-opens io.clientcore.http.netty/io.clientcore.http.netty=ALL-UNNAMED
-      --add-opens io.clientcore.http.netty/io.clientcore.http.netty4.implementation=ALL-UNNAMED
-
-      --add-reads io.clientcore.http.netty=java.logging
+      --add-reads io.clientcore.http.netty4=java.logging
     </javaModulesSurefireArgLine>
 
     <!-- Enables fail on deprecated API usage. -->
